fix: z-index of side menu

--- a/src/less/views/index/cloud.less
+++ b/src/less/views/index/cloud.less
@@ -16,7 +16,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 30;
     .no-drag();
     /*animate*/
     .duration(0.75s);
@@ -31,7 +31,7 @@
     height: 100%;
     left: 0;
     background: @color-category-background;
-    z-index: 1;
+    z-index: 25;
     box-shadow: 0px 0px 20px 3px @color-boxshadow;
 }
 
