--- a/src/less/views/index/mainmenu.less
+++ b/src/less/views/index/mainmenu.less
@@ -8,7 +8,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 30;
     .no-drag();
     /*animate*/
     .duration(0.75s);
@@ -31,7 +31,7 @@
     height: 100%;
     left: 0;
     background: @color-mainmenu-background;
-    z-index: 1;
+    z-index: 30;
     box-shadow: 0px 0px 18px 8px @color-boxshadow;
 }
 .mainmenu-logo {
